--- a/WeeklyFinder/Base.lproj/Main.storyboard
+++ b/WeeklyFinder/Base.lproj/Main.storyboard
@@ -56,17 +56,17 @@
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n2O-kl-McG">
                                                 <rect key="frame" x="0.0" y="0.0" width="273.33333333333331" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ddb-Mb-3VX">
                                                 <rect key="frame" x="0.0" y="44" width="273.33333333333331" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hFE-16-Mx9">
                                                 <rect key="frame" x="0.0" y="88" width="273.33333333333331" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
@@ -90,6 +90,9 @@
                                 <state key="normal" title="Find Day">
                                     <color key="titleColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="findDay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HxK-SD-9xw"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -108,7 +111,6 @@
                     </view>
                     <connections>
                         <outlet property="dataTF" destination="n2O-kl-McG" id="YEK-Tt-6kA"/>
-                        <outlet property="findDay" destination="fBo-GQ-9BP" id="FZe-XQ-fco"/>
                         <outlet property="monfTF" destination="Ddb-Mb-3VX" id="lJ3-0r-1bS"/>
                         <outlet property="resultLabel" destination="xLd-ey-2W6" id="4Yv-Wg-LHa"/>
                         <outlet property="yearTF" destination="hFE-16-Mx9" id="9Ad-Vv-uRG"/>
